--- a/index.html
+++ b/index.html
@@ -10792,7 +10792,7 @@
                 formData.append('res', $("#res").val());
                 // console.log('--> I\'m the boss');
                 $.ajax({
-                    url: https://spinzoneplayland.com/40/process.php',
+                    url: 'https://spinzoneplayland.com/40/process.php',
                     method: 'POST',
                     data: formData,
                     processData: false,
